--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=8000
-MONGO_URL=mongodb://localhost:27017/SCC
+MONGO_URL=mongodb+srv://mohamed:test123@cluster0.avglpd1.mongodb.net/SCC?retryWrites=true&w=majority&appName=Cluster0
 SMTP_HOST = smtp-gmail.com
 SMTP_PORT = 465
 SMTP_SERVICE = gmail
